--- a/VeriParkCaseStudy/app/build.gradle
+++ b/VeriParkCaseStudy/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -53,7 +53,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
-
+    //chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 
 
 }
