--- a/VeriParkCaseStudy/build.gradle
+++ b/VeriParkCaseStudy/build.gradle
@@ -4,9 +4,10 @@ buildscript {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "com.android.tools.build:gradle:7.0.3"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,7 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
+        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
+
     }
 }
 
